-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8235354 | 11.0.7-oracle | Yasumasa Suenaga | P4 | Resolved | Fixed | b01 |
| JDK-8224587 | 11.0.4 | Yasumasa Suenaga | P4 | Resolved | Fixed | b05 |
| JDK-8240395 | openjdk8u262 | Yasumasa Suenaga | P4 | Resolved | Fixed | team |
globalbuffersize, thread_buffer_size, memorysize, maxchunksize in -XX:FlightRecorderOptions can be set as "MEMORY SIZE" type. OTOH them in JFR.configure cannot be set so because they are defined as JLONG.
Also default values between JFR.configure and -XX:FlightRecorderOptions are inconsistent - globalbuffercount and memorysize. They should be consistent.
Also default values between JFR.configure and -XX:FlightRecorderOptions are inconsistent - globalbuffercount and memorysize. They should be consistent.
- backported by
-
JDK-8224587 Inconsistent settings between JFR.configure and -XX:FlightRecorderOptions
-
- Resolved
-
-
JDK-8235354 Inconsistent settings between JFR.configure and -XX:FlightRecorderOptions
-
- Resolved
-
-
JDK-8240395 Inconsistent settings between JFR.configure and -XX:FlightRecorderOptions
-
- Resolved
-
-
JDK-8243852 Inconsistent settings between JFR.configure and -XX:FlightRecorderOptions
-
- Resolved
-
- relates to
-
JDK-8239140 Backport JFR to OpenJDK 8
-
- Resolved
-