8213015: Inconsistent settings between JFR.configure and -XX:FlightRecorderOptions

Reviewed-by: mgronlun, egahlin